src/main/java/com/example/fooddelivery/error/NotDeletedException.java
package com.example.fooddelivery.error;

public class NotDeletedException extends RuntimeException{

    public NotDeletedException(String message){
        super(message);
    }
}
